Spacing issues

--- a/itis3135/styles/survey.css
+++ b/itis3135/styles/survey.css
@@ -60,6 +60,7 @@ input[type="reset"] {
 }
 
 .agree-label {
+    margin-top: 50px;
 
     width:300px;
 }
